1.2alpha1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature request #12935: Added the returnUrl OpenID option to
  customize the return URL on OpenID authentification.


1.1 - Monday 17 December 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.1beta1 - Wednesday 28 November 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #11926: Renamed __toString() to toString() for math classes (BC
  break, but required for PHP 5.3 and up).


1.1alpha2 - Monday 29 October 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No external changes. This release features some internal code improvements
  only.


1.1alpha1 - Tuesday 18 September 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature request #10971: Added the possibility to fetch extra
  data during authentication for Database, LDAP, OpenID and TypeKey filters.
- Implemented feature request #10997: Added support for OpenID check_immediate
  mode.
- Implemented feature request #10998: Added a Database backend for OpenID
  authentication.
- Implemented feature request #11001: Added multiple credentials support in
  the Group filter.
- Implemented feature request #11006: Added the isValid() method in the
  ezcAuthenticationSession class which can be used to avoid creating the
  authentication filters if the credentials are already stored in the session.
- Fixed the OpenID filter so that it no longer converts dots to underscores in
  URLs.


1.0 - Monday 02 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Renamed ezcAuthenticationSessionFilter to ezcAuthenticationSession.
- Fixed issue #11060: TypeKey filter does not fail when using an URL which
  does not exist and does not return 404 as a public keys file.

