@@ -3,6 +3,8 @@
 
 - Implemented feature request #12935: Added the returnUrl OpenID option to
   customize the return URL on OpenID authentification.
+- Fixed the issue where a failed connection to an LDAP server would not be
+  detected.
 
 
 1.1 - Monday 17 December 2007
